SSB-0016: implement shareJoinFlow (#41)
